<resources>
    <string name="app_name">Kasir Sederhana</string>
    <string name="app_title">Daftar Menu</string>
    <string name="ayam_goreng">Ayam Goreng</string>
    <string name="sate_ayam">Sate Ayam</string>
    <string name="nasi">Nasi</string>
    <string name="hargaAyam">Rp. 15.000</string>
    <string name="hargaSate">Rp. 20.000</string>
    <string name="hargaNasi">Rp. 5.000</string>
    <string name="total">Totalnya Adalah : %d</string>
    <string name="total_awal">Total :</string>
    <string name="reset">Reset</string>
    <string name="invalid_feedback">QTY Tidak Boleh Kosong</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="konfirmasi_hapus">Apakah anda yakin ingin menghapus data ini ?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="infoKasir">Kasir adalah orang yang bertugas untuk mengurusi dan menyimpan hasil pembayaran terutama uang, dan memasukkannya ke dalam mesin kasir. Kasir dapat ditemukan di berbagai tempat, terutama di tempat-tempat yang memiliki titik penjualan seperti di dalam toko</string>
    <string name="bagikan_template">Tanggal Pembelian : %1$s \nTotal Harga: %2$d</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="daftar_kasir">Daftar Kasir</string>
    <string name="koneksi_error">Koneksi Error</string>
    <string name="channel_name">Updater</string>
    <string name="channel_description">Untuk Notifikasi</string>
    <string name="notif_title">Ada Yang Mau Beli Pempek Nih</string>
    <string name="notif_text">Ayo Hitung Pesanan nya!!!</string>
    <string name="pempek_lenggang">Pempek Lenggang</string>
    <string name="pempek_adaan">Pempek Adaan</string>
    <string name="pempek_lenjer_besar">Pempek Lenjer Besar</string>
    <string name="hargaLenggang">Rp. 13.000</string>
    <string name="hargaAdaan">Rp. 6.000</string>
    <string name="hargaLenjerBesar">Rp. 11.000</string>
</resources>